# find-work

./: .bumpversion.cfg  README.md  pyproject.toml  setup.cfg  tox.ini
.reuse/: dep5
docs/: conf.py  contributing.rst  getting-started.rst  index.rst  reference.rst  release-notes.rst
docs/api/: find_work.core.types.rst
find_work/: __init__.py  __main__.py  cache.py  constants.py  types.py  utils.py
find_work/app/: __main__.py
find_work/cli/: __init__.py  bugzilla.py  execute.py  messages.py  options.py  pgo.py  repology.py
find_work/cli/config/: __init__.py  _types.py
find_work/core/: constants.py
find_work/core/cli/: messages.py  options.py
find_work/core/tests/: test_cli.py
find_work/core/types/: __init__.py
find_work/data/: default_config.toml
find_work/reporters/: console.py  html.py
find_work/reporters/tests/: test_console.py  test_html.py
find_work/types/: __init__.py  breadcrumbs.py
man/: find-work.1
tests/: test_config_types.py  test_repology.py
tests/data/: alias_sample.toml
