# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2024-2025 Anna <cyber@sysrq.in>

[build-system]
requires = ["hatchling>=1.5"]
build-backend = "hatchling.build"

[project]
name = "find-work"
description = "Personal advice utility for Gentoo package maintainers"
authors = [
    {name = "Anna", email = "cyber@sysrq.in"},
]
dynamic = ["version"]
readme = "README.md"
license = "WTFPL"
license-files = { globs = ["LICENSES/*"] }
requires-python = ">=3.11"
dependencies = [
    "aiohttp<4,>=3",
    "click",
    "click-aliases",
    "deepmerge",
    "platformdirs<5,>=4",
    "pluggy<2",
    "pydantic<3,>=2",
    "requests<3,>=2",

    # needed for python3.11 compatibility
    "typing_extensions<5,>=4.3.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["gentoo", "ebuild", "repository", "maintainer"]

[project.optional-dependencies]
tabulate = [
    "tabulate",
]
xml = [
    "lxml>=4.5",
]

[dependency-groups]
docs = [
    "insipid-sphinx-theme",
    "sphinx",
    "sphinx-prompt",
]
test = [
    "pkgcore",
    "pytest",
    "pytest-import-check",
]
typecheck = [
    "lxml-stubs",
    "mypy",
    "types-requests",
    "types-tabulate",
]
lint = [
    "bandit",
    "pycodestyle",
    "pyflakes",
    "reuse",
]

[project.scripts]
find-work = "find_work.app.__main__:cli"

[project.entry-points."find_work.reporters.v1"]
ConsoleBugViewReporter = "find_work.reporters.console:ConsoleBugViewReporter"
ConsolePkgcheckResultReporter = "find_work.reporters.console:ConsolePkgcheckResultReporter"
ConsoleVersionBumpReporter = "find_work.reporters.console:ConsoleVersionBumpReporter"
HtmlBugViewReporter = "find_work.reporters.html:HtmlBugViewReporter"
HtmlPkgcheckResultReporter = "find_work.reporters.html:HtmlPkgcheckResultReporter"
HtmlVersionBumpReporter = "find_work.reporters.html:HtmlVersionBumpReporter"
JsonBugViewReporter = "find_work.reporters.json:JsonBugViewReporter"
JsonPkgcheckResultReporter = "find_work.reporters.json:JsonPkgcheckResultReporter"
JsonVersionBumpReporter = "find_work.reporters.json:JsonVersionBumpReporter"
XmlBugViewReporter = "find_work.reporters.xml:XmlBugViewReporter"
XmlPkgcheckResultReporter = "find_work.reporters.xml:XmlPkgcheckResultReporter"
XmlVersionBumpReporter = "find_work.reporters.xml:XmlVersionBumpReporter"

[project.urls]
Home = "https://find-work.sysrq.in/"
Source = "https://git.sysrq.in/find-work"
Issues = "https://bugs.sysrq.in/enter_bug.cgi?product=Software&component=find-work"
Changelog = "https://find-work.sysrq.in/release-notes.html"

[tool.hatch.version]
path = "find_work/core/constants.py"

[tool.hatch.build.targets.wheel]
packages = ["find_work"]

[tool.hatch.build.targets.sdist]
include = [
    "/find_work",

    "/Makefile",
    "/docs",
    "/man",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --import-check"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "find_work.app.tests.*",
    "find_work.core.tests.*",
    "find_work.reporters.tests.*",
]
# requiring explicit types for all test methods would be cumbersome
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "click_aliases",
    "deepmerge",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "find_work/app/tests",
    "find_work/core/tests",
    "find_work/reporters/tests",
]

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true
tag_name = "{new_version}"
tag_message = "Release {new_version}"
sign_tags = true

[[tool.bumpversion.files]]
filename = "find_work/core/constants.py"

[[tool.bumpversion.files]]
filename = "docs/conf.py"

[[tool.bumpversion.files]]
filename = "docs/release-notes.rst"
search = "{current_version}-next"
replace = "{new_version}"

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.12", "3.13", "3.14", "lint"]

[tool.tox.env_run_base]
description = "run the tests + mypy under {base_python}"
ignore_errors = true
extras = [
    "tabulate",
    "xml",
]
dependency_groups = [
    "test",
    "typecheck",
]
commands = [
    ["pytest", "-vv", "{tty:--color=yes}", "{posargs:find_work}"],
    ["mypy", "--explicit-package-bases", "{posargs:find_work}"],
]

[tool.tox.env.lint]
description = "run the linters"
ignore_errors = true
skip_install = true
dependency_groups = ["lint"]
commands = [
    ["reuse", "lint"],
    ["pyflakes", "{posargs:find_work}"],
    ["pycodestyle", "{posargs:find_work}"],
    ["bandit", "-c", "pyproject.toml", "-r", "{posargs:find_work}"],
]
